--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,21 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Bienvenue{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+        <link rel="stylesheet" href="{{asset('assets/css/bootstrap.min.css')}}"/>
+        <link rel="stylesheet" href="{{asset('assets/css/style.css')}}"/>
+        {% block stylesheets %}{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+        <script src="{{asset('assets/js/bootstrap.bundle.min.js')}}"></script>
+        <script src="{{asset('assets/js/script.js')}}"></script>
+        {% block javascripts %}{% endblock %}
+
     </head>
     <body>
+        <main class = 'container'/>
         {% block body %}{% endblock %}
+        </main>
     </body>
 </html>
